enable js/palistry_custom.js in .libraries.yaml

--- a/at__palistry.libraries.yml
+++ b/at__palistry.libraries.yml
@@ -422,6 +422,15 @@ custom_css_file:
   dependencies:
     - vendor/twbs/bootstrap
 
+# Custom JS file.
+custom_js_file:
+  version: 8.x-0.1
+  js:
+    theme:
+      js/palistry_custom.js: { weight: 1000 }
+  dependencies:
+    - core/jquery
+
 bootstrap:
   css:
     theme:
